# phosphor

./: .clangd  .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES  cliff.toml  justfile  meson.build  meson.options  project.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml
diagram/args_parser/: Makefile  app.js  index.html  style.css
docs/: Makefile  actual.plan.md  current.audit.fix.md  requirements.txt
docs/source/: conf.py  index.rst
docs/source/coverage/: GcovCoverageResults.alloc.c.f16260c48ef464f90d7c92d8d2827753.html  GcovCoverageResults.archive.c.1a6a9ea7f4e883a2b6f1e4fc4828fa02.html  GcovCoverageResults.arena.c.c01afcff93e9407237a3289484fa39ab.html  GcovCoverageResults.build_cmd.c.7e7e0191acce110c68baeb2abb8a29ee.html  GcovCoverageResults.bytes.c.e741e51374e610284661d777fec83da2.html  GcovCoverageResults.clean_cmd.c.1aab79217b604b29672465ec330ec074.html  GcovCoverageResults.cli_dispatch.c.323b3529a39d3ce65bf44a0c5b512953.html  GcovCoverageResults.cli_help.c.fed382530bc1912c713187da2c8e1133.html  GcovCoverageResults.cli_version.c.1359f39de5d498a3adef83f2e710924d.html  GcovCoverageResults.config.c.b827bcc517870899432d9d07c49f76c6.html  GcovCoverageResults.create_cmd.c.b53afcc1d2124b18c5c68c3331c686fd.html  GcovCoverageResults.env.c.bd96637b2e97e6aef10b58035ad2947c.html  GcovCoverageResults.error.c.87356f34b1ca831e5ae0aa28e1b0c055.html  GcovCoverageResults.fs_atomic.c.66c647cc70b1789934bb9516269cf874.html  GcovCoverageResults.fs_copytree.c.59519a436305c243c3d4d5be12395bd3.html  GcovCoverageResults.fs_posix.c.0ab08d0ee3c32bcb8c068ace24e24014.html  GcovCoverageResults.fs_readwrite.c.3c687c08fa86a806aecddd566c6e04fd.html  GcovCoverageResults.functions.html  GcovCoverageResults.git_fetch.c.910cb37ea8cb859c57830fbf3105c065.html  GcovCoverageResults.html  GcovCoverageResults.kvp.c.64c888975557e008077f5608bd5fbbdb.html  GcovCoverageResults.lexer.c.323cf955602ae39c967151d33873d3ad.html  GcovCoverageResults.log.c.26d33af1c9be0763899f4a6d8675d8fd.html  GcovCoverageResults.manifest_load.c.14091d3c63717eebb1d88997a8635f90.html  GcovCoverageResults.metadata_filter.c.bd20ffed27dc7a2a01a5bdd8b7e729c4.html  GcovCoverageResults.parser.c.1370d6aa26268068bb3bd837a3e13d0c.html  GcovCoverageResults.path_norm.c.0bf03fb8fd7468f86ca6b9848bb945f4.html  GcovCoverageResults.planner.c.470129d62d2781821519d8602cf6e7a2.html  GcovCoverageResults.proc_posix.c.26cd97128aa6fd14ee4fa6a01a24de00.html  GcovCoverageResults.regex.c.72a26ab537aa7b029aa15ba9edf4741a.html  GcovCoverageResults.renderer.c.f94c49229bfe4610865a006e6a74e86b.html  GcovCoverageResults.sha256.c.cef53114a45dee45ff3a4514c3ebcdf6.html  GcovCoverageResults.signal.c.0d87146ccd6199faa694c97523ea4bcb.html  GcovCoverageResults.spawn.c.2ba1de903d15d8b33330fc1b6017f6fb.html  GcovCoverageResults.spec.c.55a81dd8a8f9dedb90ec9817b8660be8.html  GcovCoverageResults.staging.c.0bc795f9583591bd6f527088b4d8e45e.html  GcovCoverageResults.str.c.9d84d041f82fb090481be745d27d32ab.html  GcovCoverageResults.toml.c.7e136a7b55469a775f61863dfa5f6bbe.html  GcovCoverageResults.transform.c.84cb42c633f2688d31b0cf05ce2ff7d5.html  GcovCoverageResults.validate.c.e38ac70d5b1606ddf2b18602af196fd3.html  (+4 more)
docs/source/plans/: abstract-args-parser-into-generic.[COMPLETED ✓].rst  code-coverage-infrastructure.[COMPLETED ✓].rst  embedded-build-toolchain.[DRAFT ○].rst  glow-command-embedded-template.[ACTIVE ▸].rst  glow-command-embedded-template.[COMPLETED ✓].rst  index.[ACTIVE ▸].rst  masterplan.[ACTIVE ▸].rst  soc-audit-json-consolidation.[COMPLETED ✓].rst  soc-audit-json-consolidation.[DRAFT ○].rst  summary.[ACTIVE ▸].rst  testing-infrastructure-ceedling.[COMPLETED ✓].rst  verbose-flag-implementation.[DRAFT ○].rst  (+1 more)
include/phosphor/: alloc.h  archive.h  arena.h  args.h  bytes.h  certs.h  cli.h  color.h  commands.h  config.h  dashboard.h  embedded.h  error.h  fs.h  git_fetch.h  json.h  log.h  manifest.h  path.h  platform.h  proc.h  regex.h  render.h  serve.h  sha256.h  signal.h  str.h  template.h  term.h  types.h  vec.h
scripts/: build_ai_history.py  embed_template.py
src/: main.c
src/args-parser/: args_helpers.c  kvp.c  lexer.c  parser.c  spec.c  validate.c
src/certs/: acme_account.c  acme_challenge.c  acme_finalize.c  acme_http.c  acme_json.c  acme_json.h  acme_jws.c  acme_order.c  certs_ca.c  certs_config.c  certs_leaf.c  certs_san.c
src/cli/: cli_dispatch.c  cli_help.c  cli_version.c
src/commands/: build_cmd.c  certs_cmd.c  clean_cmd.c  create_cmd.c  doctor_cmd.c  filament_cmd.c  glow_cmd.c  phosphor_commands.c  rm_cmd.c  serve_cmd.c
src/core/: alloc.c  arena.c  bytes.c  color.c  config.c  error.c  json.c  log.c  regex.c  str.c  term.c  vec.c
src/crypto/: sha256.c
src/dashboard/: dashboard.c  db_draw.c  db_event.c  db_evt_child.c  db_evt_key.c  db_evt_pipe.c  db_evt_signal.c  db_evt_tick.c  db_fuzzy.c  db_json_fold.c  db_layout.c  db_lifecycle.c  db_popup.c  db_ring.c  db_shell.c  db_types.h
src/io/: archive.c  fs_atomic.c  fs_copytree.c  fs_readwrite.c  git_fetch.c  metadata_filter.c  path_norm.c
src/platform/: signal.c
src/platform/posix/: clock_posix.c  (+2 more)
src/proc/: env.c  spawn.c  wait.c
src/serve/: serve.c
src/template/: embedded_registry.c  manifest_load.c  planner.c  renderer.c  staging.c  transform.c  var_merge.c  writer.c
subprojects/: cjson.wrap  curl.wrap  libarchive.wrap  libgit2.wrap  ncurses.wrap  pcre2.wrap  toml-c.wrap
subprojects/packagefiles/toml-c/: meson.build
templates/cathode-landing/: eslint.config.js  justfile  package.json  template.phosphor.toml
tests/integration/: test_create_golden.sh
tests/unit/: test_acme_base64url.c  test_acme_json.c  test_alloc.c  test_archive.c  test_build_cmd.c  test_bytes.c  test_certs_config.c  test_certs_san.c  test_create_cmd.c  test_env.c  test_error.c  test_fs_atomic.c  test_kvp.c  test_manifest.c  test_metadata_filter.c  test_path_norm.c  test_regex.c  test_sha256.c  test_spawn.c  test_staging.c  test_str.c  test_toml_smoke.c  test_writer.c
website/: .env  justfile  package-lock.json  package.json  template.phosphor.toml  tsconfig.json
website/src/: app.tsx
(+167 files in other folders)
